--- a/css/main.css
+++ b/css/main.css
@@ -2,19 +2,97 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Waiting for the Sunrise', cursive;
 }
 .contenedor{
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 nav{
   display: flex;
   flex-direction: row;
-  padding: 20px;
+  justify-content: flex-end;
+  background: #5B0554;
 }
-li{
+li {
+  width: 100px;
   list-style: none;
+  margin: 2%;
+}
+a{
+  font-size: 1.5em;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+a:hover{
+  color: #077187;
+}
+nav>img{
+  width: 4%;
+  height: 4%;
+  margin: 1.5% 2.3%;
+}
+.contenedorArticulo{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: #E1D7E1;
+  padding: 3%;
+}
+.contenedorImg{
+  display: flex;
+  flex-direction: row;
 }
 .img{
+  width: 250px;
+  height: 170px;
+  border-radius: 20%;
+  margin: 20px;
+}
+.contenedorImg span{
+  /*display: flex;
+  justify-content: flex-end;*/
+  color: #081C3F;
+  font-size: 2em;
+  cursor: pointer;
+}
+.contenedorBotones{
+  width: 800px;
+  display: flex;
+  justify-content: space-between;
+  margin: 3%;
+}
+button{
+  border-radius:10px;
+  border: 0px;
+  height: 50px;
   width: 200px;
+  background: #59C7DA;
+  font-size: 1.5em;
+  color: #077187;
+  cursor: pointer;
+}
+button:hover{
+  background: #F33D71;
+  color: white;
+}
+.contenedorParrafo{
+  width: 800px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.contenedorParrafo p{
+  width: 400px;
+  padding: 20px;
+  text-align: justify;
+}
+footer{
+  display: flex;
+  justify-content: center;
+  color: white;
+  background: #4E3D61;
+  padding: 1%;
 }
