--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav{
   justify-content: flex-end;
   background: #5B0554;
 }
-li {
+nav li{
   width: 100px;
   list-style: none;
   margin: 2%;
@@ -28,10 +28,10 @@ a{
 a:hover{
   color: #077187;
 }
-nav>img{
+nav img{
   width: 4%;
   height: 4%;
-  margin: 1.5% 2.3%;
+  margin: 1.3% 2.3%;
 }
 .contenedorArticulo{
   display: flex;
@@ -46,17 +46,21 @@ nav>img{
   flex-direction: row;
 }
 .img{
-  width: 250px;
-  height: 170px;
-  border-radius: 20%;
-  margin: 20px;
+  width: 220px;
+  height: 220px;
+  border-radius: 20px;
+  margin: 10px;
+  padding: 10px;
+  border: 4px solid #8F6D8C;
 }
 .contenedorImg span{
-  /*display: flex;
-  justify-content: flex-end;*/
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: -35px;
   color: #081C3F;
   font-size: 2em;
   cursor: pointer;
+
 }
 .contenedorBotones{
   width: 800px;
@@ -65,7 +69,7 @@ nav>img{
   margin: 3%;
 }
 button{
-  border-radius:10px;
+  border-radius:50px;
   border: 0px;
   height: 50px;
   width: 200px;
@@ -79,12 +83,15 @@ button:hover{
   color: white;
 }
 .contenedorParrafo{
-  width: 800px;
+  width: 900px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  background: #D1CBD6;
+  border-radius: 50px;
 }
-.contenedorParrafo p{
+.parrafo{
   width: 400px;
   padding: 20px;
   text-align: justify;
