--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,11 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Waiting for the Sunrise', cursive;
 }
 .contenedor{
   display: flex;
   flex-direction: column;
+  font-family: 'Waiting for the Sunrise', cursive;
 }
 nav{
   display: flex;
@@ -15,7 +15,7 @@ nav{
   background: #5B0554;
 }
 nav li{
-  width: 100px;
+  width: 7%;
   list-style: none;
   margin: 2%;
 }
@@ -44,39 +44,42 @@ nav img{
 .contenedorImg{
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  width: 70%;
 }
 .img{
-  width: 220px;
-  height: 220px;
-  border-radius: 20px;
-  margin: 10px;
-  padding: 10px;
-  border: 4px solid #8F6D8C;
+  width: 280px;
+  height: 250px;
+  border-radius: 10px;
+  margin: 7px;
+  padding: 20px;
+  border: 5px solid #8F6D8C;
 }
 .contenedorImg span{
   display: flex;
   justify-content: flex-end;
-  margin-bottom: -35px;
-  color: #081C3F;
+  margin-bottom: -20px;
+  color: #8F6D8C;
   font-size: 2em;
   cursor: pointer;
-
 }
 .contenedorBotones{
-  width: 800px;
+  width: 50%;
   display: flex;
   justify-content: space-between;
   margin: 3%;
 }
 button{
-  border-radius:50px;
+  border-radius:50%;
   border: 0px;
-  height: 50px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
   background: #59C7DA;
   font-size: 1.5em;
+  font-weight: bold;
   color: #077187;
   cursor: pointer;
+  font-family: 'Waiting for the Sunrise', cursive;
 }
 button:hover{
   background: #F33D71;
