--- a/css/main.css
+++ b/css/main.css
@@ -50,10 +50,10 @@ nav img{
 .img{
   width: 280px;
   height: 250px;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 7px;
-  padding: 20px;
-  border: 5px solid #8F6D8C;
+  padding: 15px 15px 50px 15px;
+  background: white;
 }
 .contenedorImg span{
   display: flex;
